src/objects/INTEGRATION_LOG_AUDIT__c.object
<CustomObject>
    <description>Custom object stores all the field level details for the Integration log changes</description>
    <fields>
        <fullName>BST_FIELD_API_NAME__c</fullName>
        <description>Field stores the API Name of the field</description>
        <label>Field API Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BST_FIELD_LABEL__c</fullName>
        <description>Field stores the field label of the record</description>
        <label>Field Label</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BST_FIELD_NEW_VALUE__c</fullName>
        <description>Field stores the new value of the field in record</description>
        <label>Field New Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BST_FIELD_OLD_VALUE__c</fullName>
        <description>Field stores the old value of the field in the record</description>
        <label>Field Old Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BST_IMS_INTEGRATION_LOG__c</fullName>
        <description>Field stores the parent id of the Integration log</description>
        <label>IMS Integration Log</label>
        <referenceTo>INTEGRATION_LOG__c</referenceTo>
        <relationshipLabel>IMS Integration Log Audit</relationshipLabel>
        <relationshipName>IMS_Integration_Log_Audit</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>BST_Integration_Log_Audit_P1__c</fullName>
        <defaultValue>1</defaultValue>
        <description>BST - This field is used for analytics</description>
        <label>Integration Log Audit P1</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>IMS Integration Log Audit</label>
    <nameField>
        <displayFormat>ILA-{00000}</displayFormat>
        <label>BOOST Integration Log Audit ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IMS Integration Log Audit</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>